@@ -4,9 +4,11 @@ Changelog
 Version 1.89
 	Fixed bug: Changes of an unstaged file are not shown when the file path contains spaces
 	Fixed bug: Filehistory not working when opened from Visual Studio because filename is too long
+	Fixed bug: Copy selected text from file viewer now copies the complete selected text
 	The author date and commit date are both shown when they differ
 	The author and committer are both shown when they differ
 	Added option to show author date in revision graph instead of commit date
+	Added no fast-forward option to merge dialog
 
 Version 1.88
 	Fixed a bug stopping the commit dialog from refreshing after a commit
